--- a/public/index.html
+++ b/public/index.html
@@ -96,7 +96,7 @@
                                 <ul class="nav navbar-nav navbar-right">
                                     <li class="smooth-menu"><a href="index.html">HOME</a></li>
                                     <li class="smooth-menu"><a href="aboutus.html">ABOUT US</a></li>
-                                    <li class="smooth-menu"><a href="#">SERVICES </a></li>
+                                    <li class="smooth-menu"><a href="services.html">SERVICES </a></li>
                                     <li class="smooth-menu"><a href=".case_study">CASE STUDIES </a></li>
                                     <li class="smooth-menu"><a href=".footer-copyright">CONTACT US</a></li>
 
@@ -275,7 +275,7 @@
                             <div class="single-footer-txt">
                                 <p><a href="index.html">HOME</a></p>
                                 <p><a href="aboutus.html">ABOUT US</a> </p>
-                                <p><a href="#"> SERVICES</a></p>
+                                <p><a href="services.html"> SERVICES</a></p>
                                 <p><a href="#"> CASE STUDIES</a></p>
                                 <p><a href="#">CONTACT US</a></p>
                             </div>
@@ -288,7 +288,7 @@
 
                     <div class="col-sm-3">
                         <div class="single-footer-item">
-                            <h2 style="color:white"> ABOUT IUS </h2>
+                            <h2 style="color:white"> ABOUT US </h2>
                             <div class="single-footer-txt">
                                 <p>Global Axis is a specialized consulting company helping foreign companies to enter India by assisting them in strategizing and implementing their execution plans for a successful venture in India.</p>
                             </div>
