--- a/public/services.html
+++ b/public/services.html
@@ -140,113 +140,24 @@
     <section class="main-content">
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-12">
 
                     <div class="panel panel-default" style="padding: 20px;">
                         <div class="panel-heading-Studies">
-                            <h4>Global Axis </h2>
+                            <h4> Services </h2>
                         </div>
 
-                        <p style="margin-top: 20px;text-align: justify; " class='text_aboutus'>
-                            Global Axis is a specialized consulting company helping foreign companies to enter India by assisting them in strategizing and implementing their execution plans for a successful venture in India. We have extensive experience in advising companies with
-                            our on-the-ground market studies, highly focused vendor and partner search and post-entry advisory services. We follow a tailored approach to provide solutions to our clients.
 
-                        </p>
 
-                        <p style=" text-align: justify;">
-                            Our broad portfolio of services comprise of :-
-                        </p>
+
                         <ul class="a " style="margin-left: 10px;text-align: justify ">
-                            <li><a href="# ">India Entry Strategy</a></li>
+                            <li><a href="services1.html">India Entry Strategy</a></li>
                             <li><a href="# ">Sourcing from India</a></li>
                             <li><a href="# ">Post Entry Services</a> </li>
                         </ul>
-                        <img src="assets/images/image-2.png ">
-                        <p class='text_aboutus' style="text-align: justify;">
-                            Currently we work with the top European companies in their India entry strategies across the three sectors that we are present in: namely a) Automotive b) Industrial c) Health care and personal hygiene
-                        </p>
-
-                        <p class='text_aboutus' style="text-align: justify;">
-                            For those clients with already existing Indian operations, we provide consulting and services so as to increase their profitability and improve performance. We, at Global Axis strive hard to fulfill our commitments to ensure client satisfaction and thus
-                            acknowledged highly for maintaining standards in quality & timely execution of assignments.
-                        </p>
-
-
-                        <div class="panel-heading-Studies " style="margin-bottom: 15px;text-align: justify ">
-                            <h4>Our Team </h2>
-                        </div>
-                        <ul class="a " style="margin-left: 10px; text-align: justify">
-                            <li>Global Axis is driven by a group of highly qualified and motivated individuals who have an Indian insight and a deep understanding of the business practices and options in India.</li>
-                            <li>Our associates are from diverse fields like automotive, industrial, dermatology and healthcare, who are well-versed in these sectors.</li>
-                            <li> Team focuses not only on business realization but also on building trust & long-term relationships with the clients. </li>
-                        </ul>
-
                     </div>
                 </div>
 
-                <div class="col-md-6">
-
-                    <div class="panel panel-default about_us" style="padding: 20px;">
-                        <div class="panel-heading-Studies">
-                            <h4>ExOne – Global Axis </h2>
-                        </div>
-
-                        <p style="margin-top: 20px;text-align: justify; " class='text_aboutus'>
-                            Global Axis is a business partner of trust for ExOne in India since 2012 and we have been at the forefront of bringing binder jet printing technologies from ExOne.
-                        </p>
-
-                        <p style=" text-align: justify; margin-bottom: 5px;">
-                            Global Axis strongly believes in the 3S of sales, service and spares as we promote ExOne AM technology in the Indian market. We have a ExOne dedicated competent team trained in Germany located in India for sales and service activities.
-
-                        </p>
-                        <p style=" text-align: justify;  margin-bottom: 5px;">
-                            ExOne is a global leader in binder jet 3D printing for the last 20 years. It began as a 3D division of Extrude Hone and today has global operations in US, EU and Asia and has more than 245 patents.
-
-                        </p>
-                        <p style=" text-align: justify; margin-bottom: 5px;">
-                            ExOne has a leadership position in Industrial grade binder jet systems for sand, metal, ceramics and composites.
-                        </p>
-                        <p style=" text-align: justify; margin-bottom: 5px;">
-                            ExOne technology has been highly effective in making of sand cores, molds, metal 3D printed parts, ceramic 3D printing and 3D printed tooling solutions.
-
-                        </p>
-                        <p style=" text-align: justify; margin-bottom: 5px;">
-                            The industrial markets for 3D printing are:
-                        </p>
-                        <p style=" text-align: justify; margin-bottom: 5px;">
-                            Foundries, Automotive, Aerospace, Pumps, Agricultural, Defense, Medical, Architectural, Energy.
-
-                        </p>
-                        <p style=" text-align: justify; margin-bottom: 5px;">
-                            We are characterized by a 17% YOY growth transitioning from R+D and prototyping to production using the 3Dprinting technology. .
-                        </p>
-                        <p style=" text-align: justify; margin-bottom: 5px;">
-                            Sand printing: we make the complex sand cores and molds in matter of days rather than months.
-
-                        </p>
-                        <p>
-                            Metal printing we make custor or mass production of complex single alloy metal parts in hours versus weeks and months.
-                        </p style=" text-align: justify;  margin-bottom: 5px;">
-                        <p>
-                            Ceramic printing, we make complex ceramic parts using silicon carbide.
-                        </p>
-                        <p style=" text-align: justify; margin-bottom: 5px;">
-                            We are also in the 3D printed tooling solutions for complex, sacrificial, vacuum and hydro-forming parts.
-                        </p>
-                        <p style=" text-align: justify; margin-bottom: 5px;">
-                            For more information, please see our website:
-                            <a href="#">www.exone.com</a>
-
-
-                        </p>
-
-
-
-
-
-
-                    </div>
-                </div>
 
 
 
