--- a/public/aboutus.html
+++ b/public/aboutus.html
@@ -98,8 +98,8 @@
                                     <li class="smooth-menu"><a href="index.html">HOME</a></li>
                                     <li class="smooth-menu"><a href="aboutus.html">ABOUT US</a></li>
                                     <li class="smooth-menu"><a href="services.html">SERVICES </a></li>
-                                    <li class="smooth-menu"><a href="#">CASE STUDIES </a></li>
-                                    <li class="smooth-menu"><a href="#">CONTACT US</a></li>
+                                    <li class="smooth-menu"><a href="case_studies.html">CASE STUDIES </a></li>
+                                    <li class="smooth-menu"><a href="contatus.html">CONTACT US</a></li>
 
                                     <!--/.project-btn-->
                                 </ul>
@@ -144,7 +144,7 @@
 
                     <div class="panel panel-default" style="padding: 20px;">
                         <div class="panel-heading-Studies">
-                            <h4>Global Axis </h2>
+                            <h4>Global Axis </h4>
                         </div>
 
                         <p style="margin-top: 20px;text-align: justify; " class='text_aboutus'>
@@ -188,7 +188,7 @@
 
                     <div class="panel panel-default about_us" style="padding: 20px;">
                         <div class="panel-heading-Studies">
-                            <h4>ExOne – Global Axis </h2>
+                            <h4>ExOne – Global Axis </h4>
                         </div>
 
                         <p style="margin-top: 20px;text-align: justify; " class='text_aboutus'>
@@ -280,8 +280,8 @@
                                 <p><a href="index.html ">HOME</a></p>
                                 <p><a href="aboutus.html ">ABOUT US</a> </p>
                                 <p><a href="services.html"> SERVICES</a></p>
-                                <p><a href="# "> CASE STUDIES</a></p>
-                                <p><a href="# ">CONTACT US</a></p>
+                                <p><a href="case_studies.html"> CASE STUDIES</a></p>
+                                <p><a href="contatus.html">CONTACT US</a></p>
                             </div>
                             <!--/.single-footer-txt-->
                         </div>
