--- a/public/case_studies.html
+++ b/public/case_studies.html
@@ -144,60 +144,138 @@
 
                     <div class="panel panel-default" style="padding: 20px;">
                         <div class="panel-heading-Studies">
-                            <h3> Services </h3>
+                            <h3> Case Studies </h3>
                         </div>
-                        <div class="panel-heading-Studies service1_heading ">
-                            <h4>1. India Entry Strategy </h4>
-                        </div>
-                        <p style="color:black ; padding-top: 10px;">
-                            1.1 Market Exploration Phase:
+
+                        <p style="color:black;padding-bottom:10px; padding-top: 10px;">1.) One of the Europe’s largest timing chain systems producers for auto OEMs, Germany won a project in India from the world’s top car manufacturer and was faced with delivering the project to the customer. Global Axis provided
+                            complete support for:</p>
+
+                        <ul class="a " style="margin-left: 15px;text-align: justify ">
+                            <li>India supplier market study, vendor identification, short-listing and assessment in India for fine blanking, sheet metal, injection molded and assembly parts.</li>
+                            <li>Vendor development and up-gradation for all the commodities.</li>
+                            <li>Full techno-commercial assistance with guidance to German client – Indian supplier mindset.</li>
+                            <li>Complete local office support.</li>
+                            <li> Complete assistance during traveling to the suppliers and discussions.</li>
+                            <li>Support for quality assurance during development and post development in series production.</li>
+                            <li> Completer assistance in logistics partner identification, development and warehouse set up.</li>
+
+                        </ul>
+                        <p style="color:black;padding-bottom:10px; padding-top: 10px;">2.) One of Europe’s leading producers of cylinder heads, core boxes wanted to reduce costs of procurement for foundry tooling and capital equipment. All services provided by us for:</p>
+
+                        <ul class="a " style="margin-left: 15px;text-align: justify ">
+                            <li>India market analysis</li>
+                            <li>Vendor development and up-gradation for all the commodities.</li>
+                            <li>Location Analysis for setting up plant in India</li>
+                            <li>India supplier market study, vendor identification, short-listing and assessment in India.</li>
+                            <li>Vendor development and up-gradation.</li>
+
+                            <li>Full techno-commercial assistance with guidance to German client – Indian supplier mindset.</li>
+                            <li> Local office support.</li>
+                            <li>Complete assistance during traveling to the suppliers and discussions.</li>
+                            <li>Support for Quality assurance during development and post development in production.
+                            </li>
+                        </ul>
+                        <p style="color:black;padding-bottom:10px; padding-top: 10px;">3.) One of Europe’s largest tier 1 auto-component producer for door systems, seating systems, engine cooling modules for auto OEMs, Germany. Global Axis has provided complete support for:
                         </p>
-                        <p style="padding-top: 10px;">
-                            At Global Axis, we provide our clients with fast and cost-effective market-exploration services. We not only provide desk research but also practical & on the ground studies based on our experience and knowledge of Indian market. Competition mapping,
-                            technical barriers, quality issues, pricing and positioning are such aspects we specialize in.
+                        <ul class="a " style="margin-left: 15px;text-align: justify ">
+
+                            <li> India supplier market study, vendor identification, short-listing and assessment in India for Die casting, fine blanking commodities</li>
+                            <li>Vendor development and up-gradation</li>
+                            <li> Full techno-commercial assistance with guidance to German client – Indian supplier mindset</li>
+                            <li>Local office support</li>
+                            <li>Complete assistance during traveling to the suppliers and discussions</li>
+                            <li>Support for Quality assurance during development and post development in series production</li>
+                        </ul>
+                        <p style="color:black;padding-bottom:10px; padding-top: 10px;">4.) One of Europe’s well known company in automotive rubber parts (Metal to rubber bonded, extrusions, hoses) based in Holland wanted to start sourcing from India. We provided complete support for:</p>
+                        <ul class="a " style="margin-left: 15px;text-align: justify ">
+                            <li>India supplier market study, vendor identification, short-listing and assessment in India</li>
+                            <li>Vendor development and up-gradation</li>
+                            <li>Full techno-commercial assistance with guidance to German client – Indian supplier mindset</li>
+                            <li>Local office support</li>
+                            <li>Complete assistance during traveling to the suppliers and discussions</li>
+                            <li>Support for quality assurance during development and post development in series production</li>
+                        </ul>
+                        <p style="color:black;padding-bottom:10px; padding-top: 10px;">5.) One of Europe’s largest tier 1 manufacturer of friction and brake linings for auto OEMs, Germany. We have provided complete support for:</p>
+                        <ul class="a " style="margin-left: 15px;text-align: justify ">
+                            <li>Market study for this client in the India region</li>
+                            <li>Strategy discussions
+                                <ul class="a " style="margin-left: 15px;text-align: justify ">
+                                    • Sales office/Liaison office/ Branch office
+                                </ul>
+                            </li>
+                            <li>Full support in market development</li>
+                            <ul class="a " style="margin-left: 15px;text-align: justify ">
+                                • Complete plan for meetings with the sales leads in India
+                            </ul>
+                            <ul class="a " style="margin-left: 15px;text-align: justify ">
+                                • Arranging all the meetings
+                            </ul>
+                            <ul class="a " style="margin-left: 15px;text-align: justify ">
+                                •Travel arrangements
+                            </ul>
+                            <ul class="a " style="margin-left: 15px;text-align: justify ">
+                                • Finalization of presentations
+                            </ul>
+
+                        </ul>
+                        <p style="color:black;padding-bottom:10px; padding-top: 10px;">6.) One of Europe’s leading aluminum rolling mill - producers of cladded aluminum for heat exchangers, rolled plates, extrusions, piping and aircraft plates, Germany
                         </p>
-                        <p style="color:black ; padding-top: 10px;">
-                            Range of services:
+                        <ul class="a " style="margin-left: 15px;text-align: justify ">
+                            <li>Led the market study for this client in the India region</li>
+                            <li>Business plan</li>
+                            <li>Strategy discussions</li>
+                            <ul class="a " style="margin-left: 15px;text-align: justify ">
+                                • Sales office/Liaison office/ Branch office
+                            </ul>
+                            <li> Full support in market development for tooling plates</li>
+                            <ul class="a " style="margin-left: 15px;text-align: justify ">
+                                • Complete plan for meetings with the sales leads in India
+                            </ul>
+                            <ul class="a " style="margin-left: 15px;text-align: justify ">
+                                • Arranging all the meetings
+                            </ul>
+                            <ul class="a " style="margin-left: 15px;text-align: justify ">
+                                • Travel arrangements
+                            </ul>
+
+                            <ul class="a " style="margin-left: 15px;text-align: justify ">
+                                • Finalization of presentations
+                            </ul>
+                            <ul class="a " style="margin-left: 15px;text-align: justify ">
+                                • Arranging seminars – technical and commercial
+                            </ul>
+                            <ul class="a " style="margin-left: 15px;text-align: justify ">
+                                • Interviewing distributors
+                            </ul>
+                            <ul class="a " style="margin-left: 15px;text-align: justify ">
+                                • Teaching and coaching distributors
+                            </ul>
+                        </ul>
+                        <p style="color:black;padding-bottom:10px; padding-top: 10px;">7.) One of Europe’s leading producers of kitchen appliances, refrigerators, ovens – Italy. The client wanted to explore Indian supplier market for various parts such as thermostats, induction heaters, evaporators, driers, plastics,
+                            condensers. We provided the complete support to this client for:</p>
+
+                        <ul class="a " style="margin-left: 15px;text-align: justify ">
+                            <li>India supplier market study, vendor identification, short-listing and assessment in India </li>
+
+                            <li> Vendor development and up-gradation</li>
+
+                            <li>Full techno-commercial assistance with guidance to Italian client – Indian supplier mindset</li>
+                            <li>Local office support</li>
+                            <li>Complete assistance during traveling to the suppliers and discussions</li>
+                            <li>Support for quality assurance during development and post development in series production </li>
+                        </ul>
+                        <p style="color:black;padding-bottom:10px; padding-top: 10px;">8.) One of the Europe’s leading producers of natural cosmetics wanted to understand the market for natural ingredients for cosmetic products in India. Global Axis has provided the client with all the support to:
                         </p>
 
                         <ul class="a " style="margin-left: 15px;text-align: justify ">
-                            <li>Identifying potential customers and business leads</li>
-                            <li> Identifying entry barriers in the new market</li>
-                            <li>Identifying competition in the market through a detailed competitor's analysis </li>
-                            <li>Pricing & positioning</li>
-                            <li>Sales & distribution channels</li>
-                            <li>Identifying right partners and contract manufacturers</li>
-                            <li>Examination of government regulations</li>
-                            <li> Location analysis </li>
+                            <li> Led the market study for this client</li>
+                            <li>Competition study</li>
+                            <li> India entry strategy</li>
+                            <li> Initiated the business plan and facilitated discussions with the board for India set up</li>
+                            <li>Provided complete assistance in the initial study about India for their team (market, location, HR, vendors)</li>
+                            <li>Complete assistance to the client during their validation visit to India</li>
                         </ul>
-                        <p style=" padding-top: 10px; padding-bottom: 10px;">
-                            Besides offering the above-mentioned services in market exploration phase, Global Axis arranges Client’s India Validation Visit to assess the ground realities and make appropriate strategies for clients. All this is done in close-coordination with our
-                            clients.
-                        </p>
-                        <p style="color:black ;padding-top: 10px; padding-bottom: 10px;">
-                            1.2 Strategy Exploration & Formulation Phase
-                        </p>
-                        <p> We provide a complete go-to-market strategy with our recommendations on product, pricing, positioning, segmentation and other issues peculiar to Indian market.</p>
-                        <p style="color:black ; padding-top: 10px;">India entry options:</p>
-                        <ul class="a " style="margin-left: 15px;text-align: justify ">
-                            <li>Sales office or branch office or alternative</li>
-                            <li>Greenfield operation through wholly owned Indian subsidiary</li>
-                            <li>Acquisition of Indian target company</li>
-                            <li>Joint venture</li>
-                            <li>Selecting the right partner for distribution, contract manufacturing or sourcing</li>
 
-                        </ul>
-                        <p style=" padding-top: 10px; padding-bottom: 10px;">Once the client selects India entry option, we help in preparation of a joint business plan.</p>
-                        <p style="color:black ; padding-top: 10px;">1.3 Strategy Implementation Phase</p>
-
-                        <p style="  padding-bottom: 10px;">There is nothing more thrilling than to see strategy being implemented & taking shape in concrete. This crucial task is conducted by our experts and consists of:</p>
-                        <ul class="a " style="margin-left: 15px;text-align: justify ">
-                            <li>Incorporation of the Indian entity</li>
-                            <li>Commence acquisition or set-up greenfield facility</li>
-                            <li>Seeking all regulatory approvals from central and state government bodies</li>
-                            <li>Selecting and acquiring a suitable site in case of greenfield operations</li>
-                            <li>Recruitment of key top executives </li>
-                        </ul>
                     </div>
                 </div>
 
