--- a/public/contatus.html
+++ b/public/contatus.html
@@ -144,60 +144,20 @@
 
                     <div class="panel panel-default" style="padding: 20px;">
                         <div class="panel-heading-Studies">
-                            <h3> Services </h3>
+                            <h4> Contact Us </h4>
                         </div>
-                        <div class="panel-heading-Studies service1_heading ">
-                            <h4>1. India Entry Strategy </h4>
+                        <div class="Contact_us">
+                            <p><strong>Sanjay K Gupta</strong></p>
+                            <p>Founder & Managing Partner</p>
+                            <p> <strong>Tel.: </strong> 0091-11-46767719, 46076724</p>
+                            <p><strong>Mob.: </strong> 0091-9811141647</p>
+                            <p class="foot-email "><a href="# "> sanjay.gupta@globalaxis.in</a></p>
+                            <p> <strong>Global Axis</strong></p>
+                            <p>B-XI/8242</p>
+                            <p>Vasant Kunj New Delhi – 110070</p>
+                            <p>INDIA</p>
                         </div>
-                        <p style="color:black ; padding-top: 10px;">
-                            1.1 Market Exploration Phase:
-                        </p>
-                        <p style="padding-top: 10px;">
-                            At Global Axis, we provide our clients with fast and cost-effective market-exploration services. We not only provide desk research but also practical & on the ground studies based on our experience and knowledge of Indian market. Competition mapping,
-                            technical barriers, quality issues, pricing and positioning are such aspects we specialize in.
-                        </p>
-                        <p style="color:black ; padding-top: 10px;">
-                            Range of services:
-                        </p>
 
-                        <ul class="a " style="margin-left: 15px;text-align: justify ">
-                            <li>Identifying potential customers and business leads</li>
-                            <li> Identifying entry barriers in the new market</li>
-                            <li>Identifying competition in the market through a detailed competitor's analysis </li>
-                            <li>Pricing & positioning</li>
-                            <li>Sales & distribution channels</li>
-                            <li>Identifying right partners and contract manufacturers</li>
-                            <li>Examination of government regulations</li>
-                            <li> Location analysis </li>
-                        </ul>
-                        <p style=" padding-top: 10px; padding-bottom: 10px;">
-                            Besides offering the above-mentioned services in market exploration phase, Global Axis arranges Client’s India Validation Visit to assess the ground realities and make appropriate strategies for clients. All this is done in close-coordination with our
-                            clients.
-                        </p>
-                        <p style="color:black ;padding-top: 10px; padding-bottom: 10px;">
-                            1.2 Strategy Exploration & Formulation Phase
-                        </p>
-                        <p> We provide a complete go-to-market strategy with our recommendations on product, pricing, positioning, segmentation and other issues peculiar to Indian market.</p>
-                        <p style="color:black ; padding-top: 10px;">India entry options:</p>
-                        <ul class="a " style="margin-left: 15px;text-align: justify ">
-                            <li>Sales office or branch office or alternative</li>
-                            <li>Greenfield operation through wholly owned Indian subsidiary</li>
-                            <li>Acquisition of Indian target company</li>
-                            <li>Joint venture</li>
-                            <li>Selecting the right partner for distribution, contract manufacturing or sourcing</li>
-
-                        </ul>
-                        <p style=" padding-top: 10px; padding-bottom: 10px;">Once the client selects India entry option, we help in preparation of a joint business plan.</p>
-                        <p style="color:black ; padding-top: 10px;">1.3 Strategy Implementation Phase</p>
-
-                        <p style="  padding-bottom: 10px;">There is nothing more thrilling than to see strategy being implemented & taking shape in concrete. This crucial task is conducted by our experts and consists of:</p>
-                        <ul class="a " style="margin-left: 15px;text-align: justify ">
-                            <li>Incorporation of the Indian entity</li>
-                            <li>Commence acquisition or set-up greenfield facility</li>
-                            <li>Seeking all regulatory approvals from central and state government bodies</li>
-                            <li>Selecting and acquiring a suitable site in case of greenfield operations</li>
-                            <li>Recruitment of key top executives </li>
-                        </ul>
                     </div>
                 </div>
 
