--- a/public/index.html
+++ b/public/index.html
@@ -97,8 +97,8 @@
                                     <li class="smooth-menu"><a href="index.html">HOME</a></li>
                                     <li class="smooth-menu"><a href="aboutus.html">ABOUT US</a></li>
                                     <li class="smooth-menu"><a href="services.html">SERVICES </a></li>
-                                    <li class="smooth-menu"><a href=".case_study">CASE STUDIES </a></li>
-                                    <li class="smooth-menu"><a href=".footer-copyright">CONTACT US</a></li>
+                                    <li class="smooth-menu"><a href="case_studies.html">CASE STUDIES </a></li>
+                                    <li class="smooth-menu"><a href="contatus.html">CONTACT US</a></li>
 
                                     <!--/.project-btn-->
                                 </ul>
@@ -222,7 +222,7 @@
                 <div class="col-md-12">
                     <div class="panel panel-default" style="padding: 20px;">
                         <div class="panel-heading-Studies">
-                            <h4>Case Studies</h2>
+                            <h4>Case Studies</h4>
                         </div>
                         <div class="panel panel-primary">
                             <div class="panel-heading">Case Study 1</div>
@@ -276,8 +276,8 @@
                                 <p><a href="index.html">HOME</a></p>
                                 <p><a href="aboutus.html">ABOUT US</a> </p>
                                 <p><a href="services.html"> SERVICES</a></p>
-                                <p><a href="#"> CASE STUDIES</a></p>
-                                <p><a href="#">CONTACT US</a></p>
+                                <p><a href="case_studies.html"> CASE STUDIES</a></p>
+                                <p><a href="contatus.html">CONTACT US</a></p>
                             </div>
                             <!--/.single-footer-txt-->
                         </div>
