--- a/public/services.html
+++ b/public/services.html
@@ -98,8 +98,8 @@
                                     <li class="smooth-menu"><a href="index.html">HOME</a></li>
                                     <li class="smooth-menu"><a href="aboutus.html">ABOUT US</a></li>
                                     <li class="smooth-menu"><a href="services.html">SERVICES </a></li>
-                                    <li class="smooth-menu"><a href="#">CASE STUDIES </a></li>
-                                    <li class="smooth-menu"><a href="#">CONTACT US</a></li>
+                                    <li class="smooth-menu"><a href="case_studies.html">CASE STUDIES </a></li>
+                                    <li class="smooth-menu"><a href="contatus.html">CONTACT US</a></li>
 
                                     <!--/.project-btn-->
                                 </ul>
@@ -144,16 +144,12 @@
 
                     <div class="panel panel-default" style="padding: 20px;">
                         <div class="panel-heading-Studies">
-                            <h4> Services </h2>
+                            <h4> Services </h4>
                         </div>
-
-
-
-
                         <ul class="a " style="margin-left: 10px;text-align: justify ">
                             <li><a href="services1.html">India Entry Strategy</a></li>
-                            <li><a href="# ">Sourcing from India</a></li>
-                            <li><a href="# ">Post Entry Services</a> </li>
+                            <li><a href="services2.html">Sourcing from India</a></li>
+                            <li><a href="services3.html">Post Entry Services</a> </li>
                         </ul>
                     </div>
                 </div>
@@ -191,8 +187,8 @@
                                 <p><a href="index.html ">HOME</a></p>
                                 <p><a href="aboutus.html ">ABOUT US</a> </p>
                                 <p><a href="services.html"> SERVICES</a></p>
-                                <p><a href="# "> CASE STUDIES</a></p>
-                                <p><a href="# ">CONTACT US</a></p>
+                                <p><a href="case_studies.html"> CASE STUDIES</a></p>
+                                <p><a href="contatus.html">CONTACT US</a></p>
                             </div>
                             <!--/.single-footer-txt-->
                         </div>
