--- a/public/case_studies.html
+++ b/public/case_studies.html
@@ -97,7 +97,17 @@
                                 <ul class="nav navbar-nav navbar-right">
                                     <li class="smooth-menu"><a href="index.html">HOME</a></li>
                                     <li class="smooth-menu"><a href="aboutus.html">ABOUT US</a></li>
-                                    <li class="smooth-menu"><a href="services.html">SERVICES </a></li>
+
+                                    <li class="dropdown">
+                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SERVICES <span class="caret"></span></a>
+                                        <ul class="dropdown-menu">
+                                            <li><a href="services1.html">India Entry Strategy</a></li>
+                                            <li><a href="services2.html">Sourcing from India</a></li>
+                                            <li><a href="services3.html">Post Entry Services</a> </li>
+
+                                        </ul>
+                                    </li>
+
                                     <li class="smooth-menu"><a href="case_studies.html">CASE STUDIES </a></li>
                                     <li class="smooth-menu"><a href="contatus.html">CONTACT US</a></li>
 
