--- a/public/aboutus.html
+++ b/public/aboutus.html
@@ -166,9 +166,9 @@
                             Our broad portfolio of services comprise of :-
                         </p>
                         <ul class="a " style="margin-left: 10px;text-align: justify ">
-                            <li><a href="# ">India Entry Strategy</a></li>
-                            <li><a href="# ">Sourcing from India</a></li>
-                            <li><a href="# ">Post Entry Services</a> </li>
+                            <li><a href="services1.html">India Entry Strategy</a></li>
+                            <li><a href="services2.html">Sourcing from India</a></li>
+                            <li><a href="services3.html">Post Entry Services</a> </li>
                         </ul>
                         <img src="assets/images/image-2.png ">
                         <p class='text_aboutus' style="text-align: justify;">
