--- a/public/index.html
+++ b/public/index.html
@@ -101,15 +101,15 @@
                                     <li class="dropdown">
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SERVICES <span class="caret"></span></a>
                                         <ul class="dropdown-menu">
-                                            <li><a href="services1.html">India Entry Strategy</a></li>
-                                            <li><a href="services2.html">Sourcing from India</a></li>
-                                            <li><a href="services3.html">Post Entry Services</a> </li>
+                                            <li><a href="India Entry Strategy.html">India Entry Strategy</a></li>
+                                            <li><a href="Sourcing from India.html">Sourcing from India</a></li>
+                                            <li><a href="Post Entry Services.html">Post Entry Services</a> </li>
 
                                         </ul>
                                     </li>
 
 
-                                    <li class="smooth-menu"><a href="case_studies.html">CASE STUDIES </a></li>
+                                    <li class="smooth-menu"><a href="case-studies.html">CASE STUDIES </a></li>
                                     <li class="smooth-menu"><a href="contatus.html">CONTACT US</a></li>
 
                                     <!--/.project-btn-->
@@ -184,7 +184,7 @@
                         <div class="panel-heading details">
                             <h4>3D printing</h4>
                             <p style=" text-align: justify;"> At Global Axis, we believe in “Be profitable by right sourcing”. </p>
-                            <button type="button" class="btn btn-primary btn-sm">Read more</button>
+                            <button type="button" class="btn btn-primary btn-sm"><a style="color:white" href="assets/pdf/ExOne-Corporate-Brochure-2020.pdf" target="_blank" ">Read more</a></button>
                         </div>
                     </div>
 
@@ -209,17 +209,17 @@
                         </div>
                         <div class="col-md-6">
                             <img class="change_height" src="assets/images/1Ex.JPG" alt="" class="img-responsive" style="height: 240px;">
-                            <div class="overlay">3D PRINTING</div>
+                            <div class="overlay">METAL PRINTING</div>
                         </div>
                     </div>
                     <div class="row ex">
                         <div class="col-md-6">
-                            <img src="assets/images/PIC_PRD_SPE_65471c__SALL__AINO__V1.jpg" alt="" class="img-responsive">
-                            <div class="overlay">ELECTRONICS INDUSTRY</div>
+                            <img src="assets/images/CeramicPrinting.jpg" alt="" class="img-responsive">
+                            <div class="overlay"> CERAMIC PRINTING</div>
                         </div>
                         <div class="col-md-6">
-                            <img class="change_height" src="assets/images/download.jpg" alt="" class="img-responsive" style="height: 240px;">
-                            <div class="overlay">MANUFATURING INDUSTRY</div>
+                            <img class="change_height" src="assets/images/SandPrinting.jpg" alt="" class="img-responsive" style="height: 240px;">
+                            <div class="overlay">SAND PRINTING</div>
                         </div>
                     </div>
 
@@ -241,7 +241,7 @@
                             <div class="panel-body">
                                 One of the Europe’s largest timing chain systems producers for auto OEMs, Germany won a project in India from the world’s top car manufacturer and was faced with delivering the project to the customer. Global Axis provided complete support for:
                                 <br>
-                                <button type="button" class="btn btn-primary btn-sm">Read more</button>
+                                <button type="button" class="btn btn-primary btn-sm"><a style="color:white" href="case-studies.html">Read more</a></button>
 
                             </div>
                         </div>
@@ -250,7 +250,7 @@
                             <div class="panel-body">
                                 One of Europe’s leading producers of cylinder heads, core boxes wanted to reduce costs of procurement for foundry tooling and capital equipment. All services provided by us for:
                                 <br>
-                                <button type="button" class="btn btn-primary btn-sm">Read more</button>
+                                <button type="button" class="btn btn-primary btn-sm"><a a style="color:white"  href="case-studies.html">Read more</a></button>
 
                             </div>
                         </div>
@@ -288,7 +288,7 @@
                                 <p><a href="index.html">HOME</a></p>
                                 <p><a href="aboutus.html">ABOUT US</a> </p>
                                 <p><a href="services.html"> SERVICES</a></p>
-                                <p><a href="case_studies.html"> CASE STUDIES</a></p>
+                                <p><a href="case-studies.html"> CASE STUDIES</a></p>
                                 <p><a href="contatus.html">CONTACT US</a></p>
                             </div>
                             <!--/.single-footer-txt-->
