--- a/public/services.html
+++ b/public/services.html
@@ -101,13 +101,14 @@
                                     <li class="dropdown">
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SERVICES <span class="caret"></span></a>
                                         <ul class="dropdown-menu">
-                                            <li><a href="services1.html">India Entry Strategy</a></li>
-                                            <li><a href="services2.html">Sourcing from India</a></li>
-                                            <li><a href="services3.html">Post Entry Services</a> </li>
+                                            <li><a href="India Entry Strategy.html">India Entry Strategy</a></li>
+                                            <li><a href="Sourcing from India.html">Sourcing from India</a></li>
+                                            <li><a href="Post Entry Services.html">Post Entry Services</a> </li>
+
                                         </ul>
                                     </li>
 
-                                    <li class="smooth-menu"><a href="case_studies.html">CASE STUDIES </a></li>
+                                    <li class="smooth-menu"><a href="case-studies.html">CASE STUDIES </a></li>
                                     <li class="smooth-menu"><a href="contatus.html">CONTACT US</a></li>
 
                                     <!--/.project-btn-->
@@ -156,9 +157,11 @@
                             <h4> Services </h4>
                         </div>
                         <ul class="a " style="margin-left: 10px;text-align: justify ">
-                            <li><a href="services1.html">India Entry Strategy</a></li>
-                            <li><a href="services2.html">Sourcing from India</a></li>
-                            <li><a href="services3.html">Post Entry Services</a> </li>
+                            <li><a href="India Entry Strategy.html">India Entry Strategy</a></li>
+                            <li><a href="Sourcing from India.html">Sourcing from India</a></li>
+                            <li><a href="Post Entry Services.html">Post Entry Services</a> </li>
+
+
                         </ul>
                     </div>
                 </div>
@@ -196,7 +199,7 @@
                                 <p><a href="index.html ">HOME</a></p>
                                 <p><a href="aboutus.html ">ABOUT US</a> </p>
                                 <p><a href="services.html"> SERVICES</a></p>
-                                <p><a href="case_studies.html"> CASE STUDIES</a></p>
+                                <p><a href="case-studies.html"> CASE STUDIES</a></p>
                                 <p><a href="contatus.html">CONTACT US</a></p>
                             </div>
                             <!--/.single-footer-txt-->
